Use highp for glCopyTexture2D where available

This fixes artifacts in copied textures caused by insufficient precision in
"mediump" floats when used for sampling textures. On a Pixel XL, a mediump
only has 10 bits precision in fragment shaders, that apparently only works
fully for texture dimensions < 1024 pixels. Use "highp" if both GL_ES
and GL_FRAGMENT_PRECISION_HIGH are set for the shader.

(See the bug for more discussion and a proposed alternative patch.)

BUG=700031
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2744793002
Cr-Commit-Position: refs/heads/master@{#456012}

Former-commit-id: 72efd11d727f12bc45e74a1e6f7e379b3d6d5e2d