gpu/command_buffer/service/gles2_cmd_copy_texture_chromium.cc
@@ -281,7 +281,11 @@ ShaderId GetFragmentShaderId(bool premultiply_alpha,
 const char* kShaderPrecisionPreamble =
     "#ifdef GL_ES\n"
     "precision mediump float;\n"
+    "#ifdef GL_FRAGMENT_PRECISION_HIGH\n"
+    "#define TexCoordPrecision highp\n"
+    "#else\n"
     "#define TexCoordPrecision mediump\n"
+    "#endif\n"
     "#else\n"
     "#define TexCoordPrecision\n"
     "#endif\n";
